--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.12.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "firebase": "^10.4.0", // En güncel versiyonu kullanabilirsin
+"react-firebase-hooks": "^5.1.1", // Giriş durumunu yönetmeyi çok kolaylaştırır
+"react-router-dom": "^6.16.0" // Bu zaten ekli olmalı
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
