--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "firebase": "^10.4.0", // En güncel versiyonu kullanabilirsin
-"react-firebase-hooks": "^5.1.1", // Giriş durumunu yönetmeyi çok kolaylaştırır
-"react-router-dom": "^6.16.0" // Bu zaten ekli olmalı
+    "firebase": "^10.4.0", 
+"react-firebase-hooks": "^5.1.1", 
+"react-router-dom": "^6.16.0",
+    "chart.js": "^4.4.0",
+"react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
