--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,21 @@
   publish = "dist"
   functions = "netlify/functions"
 
+# === YENİ EKLENEN BÖLÜM ===
+[build.environment]
+  # Bu anahtarları Netlify'ın güvenlik taramasından hariç tutmasını söylüyoruz.
+  # Bunlar public anahtarlar olduğu için bu işlem güvenlidir.
+  # Her anahtarın adını tırnak içinde ve virgülle ayırarak yaz.
+  SECRETS_SCAN_OMIT_KEYS = [
+    "VITE_FIREBASE_API_KEY",
+    "VITE_FIREBASE_APP_ID",
+    "VITE_FIREBASE_AUTH_DOMAIN",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID",
+    "VITE_FIREBASE_PROJECT_ID",
+    "VITE_FIREBASE_STORAGE_BUCKET"
+  ]
+# === YENİ BÖLÜM SONU ===
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
